# helper-bot

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  __main__.py  pyproject.toml  requirements.txt
.github/workflows/: format-and-lint.yml
Helper/database/: __init__.py  connect.py  db.py  postgre.py
Helper/extensions/: automod.py  collection.py  errors.py  giveaway.py  help.py  logging.py  management.py  mod.py  moderation.py  reminder.py  reputation.py  selfroles.py  tags.py  ticket.py
Helper/main/: __init__.py  main.py
Helper/utils/: __init__.py  logistics.py
bot/: __init__.py
bot/core/: __init__.py  bot.py
bot/core/helper/: __init__.py  cache.py  conductor.py  convertors.py  emojis.py  pokemons.py  spam.py
bot/core/views/: __init__.py  emojis.py  giveaway.py  roles.py  selfroles.py  ticket.py
bot/core/views/paginators/: __init__.py  classic.py  select.py
bot/database/: __init__.py  database.py  models.py  mongo.py
bot/ext/: afk.py  automod.py  collection.py  errors.py  giveaway.py  help.py  invite_tracker.py  logging.py  management.py  moderation.py  reminder.py  reputation.py  roles.py  tags.py  ticket.py
core/: bot.py
custom_durations/: __init__.py  constants.py  duration.py  helpers.py  parser.py  scales.py
database/: base.py  tags_db.py
plugins/: tags.py
