[tool.poetry]
name = "helper-bot"
version = "0.0.1"
description = ""
authors = ["sarthhh <shiva02939@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hikari-lightbulb = "^2.2.2"
lightbulb-ext-filament = "^0.1.2"
aiomysql = "^0.1.1"
uvloop = "^0.16.0"
hikari = {git = "https://github.com/thesadru/hikari", rev = "feat/modal"}
hikari-miru = {git = "https://github.com/HyperGH/hikari-miru", rev = "feature/modals"}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
